--- a/template/index-corporate-1.html
+++ b/template/index-corporate-1.html
@@ -52,7 +52,7 @@
     <!-- Use css/rtl_typography-default.css for RTL version -->
     <link href="css/typography-default.css" rel="stylesheet" >
     <!-- Color Scheme (In order to change the color scheme, replace the blue.css with the color scheme that you prefer)-->
-    <link href="css/skins/light_blue.css" rel="stylesheet">
+    <link href="css/skins/green.css" rel="stylesheet">
     
 
     <!-- Custom css --> 
@@ -198,7 +198,7 @@
 
                         <!-- mega-menu start -->
                         <li class="nav-item dropdown active mega-menu mega-menu--wide">
-                          <a href="index.html" class="nav-link dropdown-toggle" id="first-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
+                          <a href="index.html" class="nav-link dropdown-toggle" id="first-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sobre</a>
                           <ul class="dropdown-menu" aria-labelledby="first-dropdown">
                             <li>
                               <div class="row">
@@ -263,7 +263,7 @@
                         <!-- mega-menu end -->
                         <!-- mega-menu start -->
                         <li class="nav-item dropdown  mega-menu mega-menu--wide">
-                          <a href="#" class="nav-link dropdown-toggle" id="second-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                          <a href="#" class="nav-link dropdown-toggle" id="second-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluções</a>
                           <ul class="dropdown-menu" aria-labelledby="second-dropdown">
                             <li>
                               <div class="row">
@@ -327,7 +327,7 @@
                         </li>
                         <!-- mega-menu end -->
                         <li class="nav-item dropdown ">
-                          <a href="#" class="nav-link dropdown-toggle" id="third-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Features</a>
+                          <a href="#" class="nav-link dropdown-toggle" id="third-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tecnologia</a>
                           <ul class="dropdown-menu" aria-labelledby="third-dropdown">
                             <li class="dropdown ">
                               <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Headers <span class="badge">v1.2</span></a>
@@ -425,7 +425,7 @@
                         </li>
                         <!-- mega-menu start -->
                         <li class="nav-item dropdown  mega-menu mega-menu--narrow">
-                          <a href="#" class="nav-link dropdown-toggle" id="fourth-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Components</a>
+                          <a href="#" class="nav-link dropdown-toggle" id="fourth-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clientes</a>
                           <ul class="dropdown-menu" aria-labelledby="fourth-dropdown">
                             <li>
                               <div class="row">
@@ -473,7 +473,7 @@
                         </li>
                         <!-- mega-menu end -->
                         <li class="nav-item dropdown ">
-                          <a href="portfolio-grid-2-3-col.html" class="nav-link dropdown-toggle" id="fifth-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
+                          <a href="portfolio-grid-2-3-col.html" class="nav-link dropdown-toggle" id="fifth-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Na mídia</a>
                           <ul class="dropdown-menu" aria-labelledby="fifth-dropdown">
                             <li class="dropdown ">
                               <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio Grid 1</a>
@@ -588,7 +588,7 @@
               <div class="col-auto ml-2 hidden-md-down">
                 <!-- header dropdown buttons -->
                 <div class="header-dropdown-buttons">
-                  <a href="page-contact.html" class="btn btn-sm radius-50 btn-default">Store <i class="fa fa-shopping-cart pl-1"></i></a>
+                  <a href="page-contact.html" class="btn btn-sm radius-50 btn-default">Contato</a>
                 </div>
                 <!-- header dropdown buttons end-->
               </div>
@@ -862,48 +862,11 @@
       <!-- ================ -->
       <section class="light-gray-bg pv-40">
         <div class="container">
-          <h3 class="mt-4"><span class="logo-font text-muted">The <span class="text-default">Project</span></span> is Simply Amazing</h3>
+          <h1 class="page-title text-center">Nossos <strong>Clientes</strong></h1>
+          <div class="separator"></div>
+          <br>
           <div class="row">
-            <div class="col-lg-6">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quos excepturi libero, alias vitae ipsam ab delectus? Sequi, dolore! Quas laudantium nam, atque tempore quaerat molestiae dicta amet tenetur soluta!</p>
-              <div class="progress mt-20 style-1">
-                <span class="text"></span>
-                <div class="progress-bar progress-bar-default" data-animate-width="90%">
-                  <span class="label object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="1000">CSS</span>
-                </div>
-              </div>
-              <div class="progress style-1">
-                <span class="text"></span>
-                <div class="progress-bar progress-bar-default" data-animate-width="95%">
-                  <span class="label object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="1000">HTML5</span>
-                </div>
-              </div>
-              <div class="progress style-1">
-                <span class="text"></span>
-                <div class="progress-bar progress-bar-default" data-animate-width="80%">
-                  <span class="label object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="1000">JQUERY</span>
-                </div>
-              </div>
-              <div class="progress style-1">
-                <span class="text"></span>
-                <div class="progress-bar progress-bar-default" data-animate-width="85%">
-                  <span class="label object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="1000">PHP</span>
-                </div>
-              </div>
-              <div class="progress style-1">
-                <span class="text"></span>
-                <div class="progress-bar progress-bar-default" data-animate-width="75%">
-                  <span class="label object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="1000">PHOTOSHOP</span>
-                </div>
-              </div>
-              <div class="progress style-1">
-                <span class="text"></span>
-                <div class="progress-bar progress-bar-default" data-animate-width="90%">
-                  <span class="label object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="1000">DRUPAL</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
+            <div class="col-lg-9">
               <div class="owl-carousel content-slider">
                 <div class="testimonial text-center">
                   <div class="testimonial-image">
@@ -942,28 +905,28 @@
           <div class="clients-container">
             <div class="clients">
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
-                <a href="#"><img src="images/client-1.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
-                <a href="#"><img src="images/client-2.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
-                <a href="#"><img src="images/client-3.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
-                <a href="#"><img src="images/client-4.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
-                <a href="#"><img src="images/client-5.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="600">
-                <a href="#"><img src="images/client-6.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="700">
-                <a href="#"><img src="images/client-7.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="800">
-                <a href="#"><img src="images/client-8.png" alt=""></a>
+                <a href="#"><img src="images/logo-clients.svg" alt=""></a>
               </div>
             </div>
           </div>
@@ -1076,65 +1039,6 @@
                     </div>
                     <div class="text-right space-top">
                       <a href="blog-large-image-right-sidebar.html" class="link-dark"><i class="fa fa-plus-circle pl-1 pr-1"></i>More</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="footer-content">
-                    <h2 class="title">Portfolio Gallery</h2>
-                    <div class="separator-2"></div>
-                    <div class="row grid-space-10">
-                      <div class="col-4 col-lg-6">
-                        <div class="overlay-container mb-10">
-                          <img src="images/gallery-1.jpg" alt="">
-                          <a href="portfolio-item.html" class="overlay-link small">
-                            <i class="fa fa-link"></i>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="col-4 col-lg-6">
-                        <div class="overlay-container mb-10">
-                          <img src="images/gallery-2.jpg" alt="">
-                          <a href="portfolio-item.html" class="overlay-link small">
-                            <i class="fa fa-link"></i>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="col-4 col-lg-6">
-                        <div class="overlay-container mb-10">
-                          <img src="images/gallery-3.jpg" alt="">
-                          <a href="portfolio-item.html" class="overlay-link small">
-                            <i class="fa fa-link"></i>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="col-4 col-lg-6">
-                        <div class="overlay-container mb-10">
-                          <img src="images/gallery-4.jpg" alt="">
-                          <a href="portfolio-item.html" class="overlay-link small">
-                            <i class="fa fa-link"></i>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="col-4 col-lg-6">
-                        <div class="overlay-container mb-10">
-                          <img src="images/gallery-5.jpg" alt="">
-                          <a href="portfolio-item.html" class="overlay-link small">
-                            <i class="fa fa-link"></i>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="col-4 col-lg-6">
-                        <div class="overlay-container mb-10">
-                          <img src="images/gallery-6.jpg" alt="">
-                          <a href="portfolio-item.html" class="overlay-link small">
-                            <i class="fa fa-link"></i>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="text-right space-top">
-                      <a href="portfolio-grid-2-3-col.html" class="link-dark"><i class="fa fa-plus-circle pl-1 pr-1"></i>More</a>
                     </div>
                   </div>
                 </div>
