--- a/template/sass/_variables.scss
+++ b/template/sass/_variables.scss
@@ -12,9 +12,9 @@ $gray-lighter: #cdcdcd !default;
 $white: #ffffff !default;
 $black: #000000 !default;
 
-// Base Colors of Light Blue Skin.
-$base-color: #09afdf !default;
-$base-color-hover: #0c9ec7 !default;
+// Base Colors of Green Skin.
+$base-color: #06AF58 !default;
+$base-color-hover: #00A04E !default;
 
 // Background color for `<body>`.
 $body-bg: #ffffff !default;
