landing in progress

--- a/template/css/skins/green.css
+++ b/template/css/skins/green.css
@@ -309,7 +309,7 @@ ul.pagination .page-item.active .page-link,
 /*Icons
 ---------------------------------- */
 .icon.default-bg {
-  background-color: #24a828;
+  background-color: #90CB81;
 }
 
 .icon.light-bg {
