--- a/template/index-corporate-1.html
+++ b/template/index-corporate-1.html
@@ -732,19 +732,19 @@
           <div class="clients-container">
             <div class="clients">
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
-                <a href="#"><img src="images/client-1.svg" alt=""></a>
+                <a target="_blank" href="http://www.suzano.com.br/"><img src="images/client-1.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
-                  <a href="#"><img src="images/client-2.svg" alt=""></a>
+                  <a target="_blank" href="http://www.cooperativasaojoao.com.br/index2.html"><img src="images/client-2.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
-                  <a href="#"><img src="images/client-3.svg" alt=""></a>
+                  <a target="_blank" href="http://www.kiarafoods.com.br/"><img src="images/client-3.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
-                  <a href="#"><img src="images/client-4.svg" alt=""></a>
+                  <a target="_blank" href="http://www.echeveria.com.br/"><img src="images/client-4.svg" alt=""></a>
               </div>
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
-                  <a href="#"><img src="images/client-5.svg" alt=""></a>
+                  <a target="_blank" href="http://devtecnologia.com.br/"><img src="images/client-5.svg" alt=""></a>
               </div>
             </div>
           </div>
