structure in progress 2

--- a/template/index-corporate-1.html
+++ b/template/index-corporate-1.html
@@ -475,7 +475,7 @@
               <div class="row">
                 <div class="col-md-4 ">
                   <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                    <span class="icon default-bg circle"><img src="images/technology-1.svg"></span>
+                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-1.svg"></span>
                     <h3>Visão Computacional</h3>
                     <div class="separator clearfix"></div>
                     <p>Utilizamos processamento de imagens<br> para automatizar inspeções visuais e<br> aumentar a sua acurácia.</p>
@@ -484,7 +484,7 @@
                 </div>
                 <div class="col-md-4 ">
                   <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                    <span class="icon default-bg circle"><img src="images/technology-2.svg"></span>
+                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-2.svg"></span>
                     <h3>Inteligência Artificial</h3>
                     <div class="separator clearfix"></div>
                     <p>O aprendizado de máquina e o uso<br> de redes neurais nos auxiliam no<br> reconhecimento de padrões.</p>
@@ -493,7 +493,7 @@
                 </div>
                 <div class="col-md-4 ">
                   <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                    <span class="icon default-bg circle"><img src="images/technology-3.svg"></span>
+                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
                     <h3>Câmeras Hiperespectrais</h3>
                     <div class="separator clearfix"></div>
                     <p>Utilizamos câmeras hiperespectrais para<br> analisar características que não podem<br> ser vistas com câmeras tradicionais.</p>
@@ -536,7 +536,7 @@
               <h3>Tomate</h3>
               <div class="separator"></div>
               <p>Calibradora eletrônica de<br> tomates miúdos</p>
-              <a href="page-services.html">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -552,7 +552,7 @@
               <h3>Uva</h3>
               <div class="separator"></div>
               <p>Sistema automático de<br> qualificação de uvas</p>
-              <a href="page-services.html">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -568,7 +568,7 @@
               <h3>Eucalipto</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas florestais</p>
-              <a href="page-services.html">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
               <!--<a href="#" class="btn btn-gray-transparent btn-animated btn-sm margin-clear">Read More<i class="fa fa-arrow-right pl-10"></i></a>-->
             </div>
           </div>
@@ -585,7 +585,7 @@
               <h3>Flores</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas de flores</p>
-              <a href="page-services.html">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -633,7 +633,7 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="pv-30 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg circle"><img src="images/icon-benefit-1.svg"></img></span>
+                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></img></span>
                 <h3>Redução de custos</h3>
                 <div class="separator clearfix"></div>
                 <p>Automação na seleção de variedades<br> e na avaliação de qualidade</p>
@@ -641,7 +641,7 @@
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
-                <span class="icon default-bg circle"><img src="images/icon-benefit-2.svg"></img></span>
+                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-2.svg"></img></span>
                 <h3>Aumento de Produtividade</h3>
                 <div class="separator clearfix"></div>
                 <p>Ganho de eficiência nos processos de<br> seleção e de controle de qualidade</p>
@@ -649,7 +649,7 @@
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
-                <span class="icon default-bg circle"><img src="images/icon-benefit-3.svg"></img></span>
+                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-3.svg"></img></span>
                 <h3>Controle de qualidade</h3>
                 <div class="separator clearfix"></div>
                 <p>Ganho de precisão para a seleção da safra<br> e garantia de produtos com qualidade</p>
@@ -659,7 +659,7 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="pv-30 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg circle"><img src="images/icon-benefit-4.svg"></img></span>
+                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-4.svg"></img></span>
                 <h3>Relatórios detalhados</h3>
                 <div class="separator clearfix"></div>
                 <p>Transparência nas métricas de performance<br> das máquinas e sistemas</p>
@@ -667,7 +667,7 @@
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
-                <span class="icon default-bg circle"><img src="images/icon-benefit-5.svg"></img></span>
+                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-5.svg"></img></span>
                 <h3>Operação intuitiva</h3>
                 <div class="separator clearfix"></div>
                 <p>Máquinas e sistemas de fácil operação</p>
@@ -675,7 +675,7 @@
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
-                <span class="icon default-bg circle"><img src="images/icon-benefit-6.svg"></img></span>
+                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></img></span>
                 <h3>Assistência técnica</h3>
                 <div class="separator clearfix"></div>
                 <p>Garantia dos equipamentos e atuação de<br> equipe especializada no suporte</p>
@@ -753,6 +753,26 @@
           <h2 class="page-title text-center">Parceiros</h2>
           <div class="separator"></div>
           <br>
+
+          <div class="clients-container">
+            <div class="clients">
+              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
+                <a target="_blank" href="http://www.suzano.com.br/"><img src="images/partner-1.svg" alt=""></a>
+              </div>
+              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
+                  <a target="_blank" href="http://www.cooperativasaojoao.com.br/index2.html"><img src="images/partner-2.svg" alt=""></a>
+              </div>
+              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
+                  <a target="_blank" href="http://www.kiarafoods.com.br/"><img src="images/partner-3.svg" alt=""></a>
+              </div>
+              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
+                  <a target="_blank" href="http://www.echeveria.com.br/"><img src="images/partner-4.svg" alt=""></a>
+              </div>
+              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
+                  <a target="_blank" href="http://devtecnologia.com.br/"><img src="images/partner-5.svg" alt=""></a>
+              </div>
+            </div>
+          </div>
 
         </div>
       </section>
