--- a/template/css/style.css
+++ b/template/css/style.css
@@ -4279,6 +4279,15 @@ fieldset[disabled] .form-control {
   border: 1px solid transparent;
 }
 
+.icon-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -18px;
+  margin-left: -18px;
+  height: 36px;
+}
+
 .icons .icon {
   margin: 0 5px 5px 0;
 }
@@ -7139,8 +7148,8 @@ h6.media-heading {
 
 .clients .client-image {
   text-align: center;
-  width: 190px;
-  height: auto;
+  height: 100px;
+  width: auto;
   margin: 5px;
   display: inline-block;
 }
