--- a/template/sass/_8_main-slideshow.scss
+++ b/template/sass/_8_main-slideshow.scss
@@ -86,7 +86,7 @@
   line-height: 1.2;
 }
 .large_white {
-  font-size: 42px;
+  font-size: 3rem;
   font-family: $font-family-raleway;
   color: $white;
   line-height: 1.2;
@@ -109,7 +109,7 @@
   line-height: 1.2;
 }
 .large_dark {
-  font-size: 42px;
+  font-size: 3rem;
   font-family: $font-family-raleway;
   color: $gray-dark;
   line-height: 1.2;
