--- a/template/index-corporate-1.html
+++ b/template/index-corporate-1.html
@@ -76,7 +76,7 @@
         <div class="header-top dark">
           <div class="container">
             <div class="row">
-              <div class="col-2 col-md-4">
+              <div class="col-1 col-md-3">
                 <!-- header-top-first start -->
                 <div class="header-top-first clearfix">
                   <ul class="social-links circle small clearfix hidden-sm-down">
@@ -97,7 +97,7 @@
                 </div>
                 <!-- header-top-first end -->
               </div>
-              <div class="col-10 col-md-8">
+              <div class="col-11 col-md-9">
 
                 <!-- header-top-second start -->
                 <!-- ================ -->
@@ -106,6 +106,7 @@
                     <li class="list-inline-item">Realizamos projetos sob medida para o seu negócio. Entre em contato:</li>
                     <li class="list-inline-item"><i class="fa fa-phone pr-1 pl-10 text-default"></i>(+55) (11) 4302-5902</li>
                     <li class="list-inline-item"><i class="fa fa-envelope-o pr-1 pl-10 text-default"></i>contato@mvisia</li>
+                    <li class="list-inline-item"><i class="fa fa-whatsapp pr-1 pl-10 text-default"></i>(+55) (11) 98134-9727</li>
                   </ul>
                 </div>
                 <!-- header-top-second end -->
@@ -134,7 +135,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="index.html"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
@@ -176,26 +177,27 @@
                       <!-- main-menu -->
                       <ul class="navbar-nav ml-xl-auto">
                         <li class="nav-item mega-menu mega-menu--wide">
-                          <a href="#" class="nav-link" id="first-dropdown" aria-expanded="false">Sobre</a>
+                          <a href="#" target="_self" class="nav-link" id="first-dropdown" aria-expanded="false">Sobre</a>
                         </li>
                         <li class="nav-item mega-menu mega-menu--wide">
-                          <a href="#" class="nav-link" id="second-dropdown" aria-expanded="false">Tecnologias</a>
+                          <a href="#" target="_self" class="nav-link" id="second-dropdown" aria-expanded="false">Tecnologias</a>
                         </li>
                         <li class="nav-item">
-                          <a href="#" class="nav-link" id="third-dropdown" aria-expanded="false">Cases</a>
+                          <a href="#" target="_self" class="nav-link" id="third-dropdown" aria-expanded="false">Cases</a>
                         </li>
                         <li class="nav-item mega-menu mega-menu--narrow">
-                          <a href="#" class="nav-link" id="fourth-dropdown" aria-expanded="false">Clientes</a>
+                          <a href="#" target="_self" class="nav-link" id="fourth-dropdown" aria-expanded="false">Clientes</a>
                         </li>
                         <li class="nav-item">
-                          <a href="#" class="nav-link" aria-haspopup="true" aria-expanded="false">Na mídia</a>
+                          <a href="#" target="_self" class="nav-link" aria-haspopup="true" aria-expanded="false">Na mídia</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link" id="fifth-dropdown" aria-haspopup="true" aria-expanded="false">Contato</a>
+                            <a href="#" target="_self" class="nav-link" id="fifth-dropdown" aria-haspopup="true" aria-expanded="false">Contato</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- futuro blog -->
+                        <!--<li class="nav-item">
                             <a href="#" class="nav-link" id="fifth-dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        </li>
+                        </li>-->
                       </ul>
                     </div>
                   </nav>
@@ -392,7 +394,7 @@
                   data-transform_in="y:[100%];sX:1;sY:1;s:900;e:Power4.easeInOut;"
                   data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
                   data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Trabalhamos com projetos sob demanda de máquinas de classificação de variedades<br> e de sistemas de controle de qualidade
+                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Trabalhamos com projetos sob demanda de máquinas de classificação de diversos produtos<br> e de sistemas de controle de qualidade
                 </div>
                 <!-- slide 3 end -->
               </ul>
@@ -426,11 +428,7 @@
                 e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.
                 O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de
                 análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>. Desenvolvemos também
-                a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>                  
-              <p>A empresa existe desde 2012, quando foi incubada no CIETEC-USP, e já desenvolveu soluções para os setores
-                de hortifrúti, flores e mudas florestais. Tivemos dois dos nossos projetos financiados pela FAPESP e também
-                mantemos estreitas relações com o ecossistema de inovação, com diversos prêmios ganhos, como o <strong>Prêmio
-                Santander de Empreendedorismo</strong> e o <strong>Prêmio Odebrecht Sustentabilidade</strong>.</p>
+                a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
               <a href="" class="btn radius-2 btn-default btn-hvr hvr-shutter-out-horizontal">Saiba mais</a>
             </div>
           </div>
@@ -445,6 +443,7 @@
             <div class="main col-md-12">
               <h2 class="page-title text-center">Tecnologias</h2>
               <div class="separator"></div>
+              <h3 class="page-subtitle text-center">Somos especialistas em desenvolvimento de softwares inteligentes para o reconhecimento<br> de características visuais por meio de algoritmos próprios e exclusivos.</h3>
               <br>
 
               <div class="row">
@@ -586,6 +585,7 @@
                   <div class="col-sm-4 text-right">
                     <i class="fa fa-phone pr-2 text-default"></i> (+55)(11) 4302-5902
                     <a href="mailto:contato@mvisia.com.br"><i class="fa fa-envelope-o pr-2"></i>contato@mvisia.com.br</a>
+                    <i class="fa fa-phone pr-2 text-default"></i> (+55)(11) 4302-5902
                   </div>
                 </div>
               </div>
@@ -611,7 +611,7 @@
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></img></span>
                 <h3>Redução de custos</h3>
                 <div class="separator clearfix"></div>
-                <p>Automação na seleção de variedades<br> e na avaliação de qualidade</p>
+                <p>Automação na seleção de produtos<br> e na avaliação de qualidade</p>
               </div>
             </div>
             <div class="col-lg-4">
@@ -785,7 +785,7 @@
           <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
           <li class="list-inline-item"><a href="tel:+00 1234567890" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</a></li>
           <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</a></li>
-          <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
+          <li class="list-inline-item"><a href="" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
         </ul>
         <div class="row">
           <div class="col-md-12">
