--- a/template/index-corporate-1.html
+++ b/template/index-corporate-1.html
@@ -418,7 +418,7 @@
                 <img src="images/about-bg-image.png" alt="">
                 <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil" class="overlay-link"><i class="fa fa-link"></i></a>
                 <div class="overlay-bottom hidden-sm-down">
-                  <div class="text">Assista aos nossos vídeos</div>
+                  <div class="text">Assista aos nossos vídeos!</div>
                 </div>
               </div>
             </div>
@@ -485,7 +485,7 @@
       <!-- section start -->
       <!-- ================ -->
       <section class="main-container">
-        
+
       <div class="container">
       <div class="row">
         
@@ -573,20 +573,22 @@
 
       <!-- section start -->
       <!-- ================ -->
-      <section class="section light-gray-bg clearfix">
+      <section class="section dark-bg clearfix">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <div class="call-to-action">
                 <div class="row">
-                  <div class="col-sm-8">
+                  <div class="col-sm-12 text-center">
                     <h3 class="mt-10 text-muted">Realizamos projetos para o seu negócio. Entre em contato:</h3>
                   </div>
-                  <div class="col-sm-4 text-right">
+                <div class="row">
+                  <div class="col-sm-12 text-center">
                     <i class="fa fa-phone pr-2 text-default"></i> (+55)(11) 4302-5902
-                    <a href="mailto:contato@mvisia.com.br"><i class="fa fa-envelope-o pr-2"></i>contato@mvisia.com.br</a>
-                    <i class="fa fa-phone pr-2 text-default"></i> (+55)(11) 4302-5902
+                    <a href="mailto:contato@mvisia.com.br"><i class="fa fa-envelope-o pr-2 text-default"></i>contato@mvisia.com.br</a>
+                    <i class="fa fa-whatsapp pr-2 text-default"></i> (+55) (11) 98134-9727
                   </div>
+                </div>
                 </div>
               </div>
             </div>
