--- a/template/index-corporate-1.html
+++ b/template/index-corporate-1.html
@@ -177,7 +177,7 @@
                       <!-- main-menu -->
                       <ul class="navbar-nav ml-xl-auto">
                         <li class="nav-item mega-menu mega-menu--wide">
-                          <a href="#" target="_self" class="nav-link" id="first-dropdown" aria-expanded="false">Sobre</a>
+                          <a href="page-about.html" target="_self" class="nav-link" id="first-dropdown" aria-expanded="false">Sobre</a>
                         </li>
                         <li class="nav-item mega-menu mega-menu--wide">
                           <a href="#" target="_self" class="nav-link" id="second-dropdown" aria-expanded="false">Tecnologias</a>
