--- a/template/page-about.html
+++ b/template/page-about.html
@@ -711,11 +711,15 @@
             <div class="row grid-space-20">
               <div class="col-md-6 col-lg-3">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
-                  <div class="overlay-container overlay-visible">
+                  <div class="overlay-container">
                     <img src="images/team-member-1.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
                   </div>
                   <div class="body">
                     <h3 class="margin-clear">Fernando Lopes</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
                     <small>Founder</small>
                     <div class="separator mt-10"></div>
                     <ul class="social-links circle colored margin-clear">
