--- a/template/css/skins/green.css
+++ b/template/css/skins/green.css
@@ -120,8 +120,7 @@ mark,
 /* Buttons
 ---------------------------------- */
 .btn-default {
-  background-color: #24a828;
-  border-color: #1f9123;
+  background-color: #007F3D;
 }
 
 .btn-default:hover,
