--- a/template/page-about.html
+++ b/template/page-about.html
@@ -732,9 +732,13 @@
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container overlay-visible">
                     <img src="images/team-member-2.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
                   </div>
                   <div class="body">
                     <h3 class="margin-clear">Fernando Velloso</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
                     <small>Founder</small>
                     <div class="separator mt-10"></div>
                     <ul class="social-links circle colored margin-clear">
@@ -747,9 +751,13 @@
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container overlay-visible">
                     <img src="images/team-member-3.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
                   </div>
                   <div class="body">
                     <h3 class="margin-clear">Henrique Oliveira</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
                     <small>Founder</small>
                     <div class="separator mt-10"></div>
                     <ul class="social-links circle colored margin-clear">
@@ -762,9 +770,13 @@
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container overlay-visible">
                     <img src="images/team-member-1.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
                   </div>
                   <div class="body">
                     <h3 class="margin-clear">Team Member</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
                     <small>Founder</small>
                     <div class="separator mt-10"></div>
                     <ul class="social-links circle colored margin-clear">
