--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>The Project | Home</title>
+    <title>MVisia - Máquinas de Visão e Inteligência Artificial</title>
     <meta name="description" content="The Project a Bootstrap-based, Responsive HTML5 Template">
     <meta name="author" content="htmlcoder.me">
 
@@ -19,7 +19,7 @@
 
     <!-- Web Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:700,400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:700,500,400,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 
@@ -161,7 +161,7 @@
 
                       <!-- name-and-slogan -->
                       <div class="site-slogan">
-                        Multipurpose HTML5 Template
+                        MVisia - Máquinas de Visão e Inteligência Artificial
                       </div>
 
                     </div>
@@ -179,22 +179,27 @@
                         <li class="nav-item mega-menu mega-menu--wide">
                           <a href="#" target="_self" class="nav-link" id="second-dropdown" aria-expanded="false">Tecnologias</a>
                         </li>
-                        <li class="nav-item">
-                          <a href="#" target="_self" class="nav-link" id="third-dropdown" aria-expanded="false">Cases</a>
+                        <li class="nav-item dropdown active">
+                          <a href="index.html" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cases</a>
+                          <ul class="dropdown-menu" aria-labelledby="first-dropdown">
+                            <li>
+                              <ul class="menu">
+                                <li><a href="page-case-1.html">Calibradora eletrônica de tomates miúdos</a></li>
+                                <li><a href="page-case-2.html">Sistema automático de qualificação de uvas</a></li>
+                                <li><a href="page-case-3.html">Seletora automática de mudas florestais</a></li>
+                                <li><a href="page-case-4.html">Seletora automática de mudas de flores</a></li>
+                              </ul>
+                            </li>
+                          </ul>
                         </li>
-                        <li class="nav-item mega-menu mega-menu--narrow">
-                          <a href="#" target="_self" class="nav-link" id="fourth-dropdown" aria-expanded="false">Clientes</a>
-                        </li>
                         <li class="nav-item">
-                          <a href="#" target="_self" class="nav-link" aria-haspopup="true" aria-expanded="false">Na mídia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" target="_self" class="nav-link" id="fifth-dropdown" aria-haspopup="true" aria-expanded="false">Contato</a>
+                          <a href="page-media.html" target="_self" class="nav-link" aria-haspopup="true" aria-expanded="false">Na mídia</a>
                         </li>
                         <!-- futuro blog -->
-                        <!--<li class="nav-item">
-                            <a href="#" class="nav-link" id="fifth-dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        </li>-->
+                        <li class="nav-item">
+                            <a href="" target="_blank" class="nav-link" aria-haspopup="true" aria-expanded="false">Blog</a>
+                        </li>
+                        <!-- end futuro blog -->
                       </ul>
                     </div>
                   </nav>
@@ -202,13 +207,6 @@
                 <!-- main-navigation end -->
                 </div>
                 <!-- header-second end -->
-              </div>
-              <div class="col-auto ml-2 hidden-md-down">
-                <!-- header dropdown buttons -->
-                <!-- <div class="header-dropdown-buttons">
-                  <a href="page-contact.html" class="btn btn-sm radius-50 btn-default">Contato</a>
-                </div> -->
-                <!-- header dropdown buttons end-->
               </div>
             </div>
           </div>
