commit 21.02 adjusts landing

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -98,6 +98,10 @@ ul {
   border-top-color: #303030;
 }
 
+#header-top-second {
+  opacity: 0.75;
+}
+
 .header.header-small {
   padding: 10px 0;
 }
