--- a/template/index.html
+++ b/template/index.html
@@ -101,8 +101,8 @@
                 <div id="header-top-second"  class="clearfix text-right">
                   <ul class="list-inline">
                     <li class="list-inline-item">Realizamos projetos sob medida para o seu negócio. Entre em contato:</li>
-                    <li class="list-inline-item"><i class="fa fa-phone pr-1 pl-10 text-default"></i>(+55) (11) 4302-5902</li>
                     <li class="list-inline-item"><i class="fa fa-envelope-o pr-1 pl-10 text-default"></i>contato@mvisia</li>
+                    <li class="list-inline-item"><i class="fa fa-phone pr-1 pl-10 text-default"></i>(+55) (11) 4302-5902</li>
                     <li class="list-inline-item"><i class="fa fa-whatsapp pr-1 pl-10 text-default"></i>(+55) (11) 98134-9727</li>
                   </ul>
                 </div>
@@ -132,7 +132,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="#" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
@@ -176,11 +176,20 @@
                         <li class="nav-item mega-menu mega-menu--wide">
                           <a href="page-about.html" target="_self" class="nav-link" id="first-dropdown" aria-expanded="false">Sobre</a>
                         </li>
-                        <li class="nav-item mega-menu mega-menu--wide">
-                          <a href="#" target="_self" class="nav-link" id="second-dropdown" aria-expanded="false">Tecnologias</a>
+                        <li class="nav-item dropdown">
+                          <a href="#" target="_self" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Tecnologias</a>
+                          <ul class="dropdown-menu" aria-labelledby="first-dropdown">
+                            <li>
+                              <ul class="menu">
+                                <li><a href="page-case-1.html">Visão computacional</a></li>
+                                <li><a href="page-case-2.html">Inteligência artificial</a></li>
+                                <li><a href="page-case-3.html">Câmeras hiperespectrais</a></li>
+                              </ul>
+                            </li>
+                          </ul>
                         </li>
-                        <li class="nav-item dropdown active">
-                          <a href="index.html" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cases</a>
+                        <li class="nav-item dropdown">
+                          <a href="#" target="_self" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Cases</a>
                           <ul class="dropdown-menu" aria-labelledby="first-dropdown">
                             <li>
                               <ul class="menu">
@@ -196,9 +205,9 @@
                           <a href="page-media.html" target="_self" class="nav-link" aria-haspopup="true" aria-expanded="false">Na mídia</a>
                         </li>
                         <!-- futuro blog -->
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a href="" target="_blank" class="nav-link" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        </li>
+                        </li>-->
                         <!-- end futuro blog -->
                       </ul>
                     </div>
@@ -249,7 +258,7 @@
                 <!-- LAYER NR. 1 -->
                 <div class="tp-caption large_white"
                   data-x="center"
-                  data-y="110"
+                  data-y="200"
                   data-start="500"
                   data-width="1000"
                   data-transform_idle="o:1;"
@@ -262,7 +271,7 @@
                 <!-- LAYER NR. 2 -->
                 <div class="tp-caption large_white tp-resizeme hidden-sm-down"
                   data-x="center"
-                  data-y="150"
+                  data-y="260"
                   data-start="650"
                   data-width="500"
                   data-transform_idle="o:1;"
@@ -273,9 +282,9 @@
                 <!-- LAYER NR. 3 -->
                 <div class="tp-caption medium_white hidden-sm-down"
                   data-x="center"
-                  data-y="180"
+                  data-y="300"
                   data-start="650"
-                  data-width="750"
+                  data-width="800"
                   data-transform_idle="o:1;"
                   data-transform_in="y:[100%];sX:1;sY:1;s:900;e:Power4.easeInOut;"
                   data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
@@ -306,7 +315,7 @@
                 <!-- LAYER NR. 1 -->
                 <div class="tp-caption large_white"
                   data-x="center"
-                  data-y="110"
+                  data-y="200"
                   data-start="500"
                   data-width="1000"
                   data-transform_idle="o:1;"
@@ -319,7 +328,7 @@
                 <!-- LAYER NR. 2 -->
                 <div class="tp-caption large_white tp-resizeme hidden-sm-down"
                   data-x="center"
-                  data-y="150"
+                  data-y="260"
                   data-start="650"
                   data-width="500"
                   data-transform_idle="o:1;"
@@ -330,9 +339,9 @@
                 <!-- LAYER NR. 3 -->
                 <div class="tp-caption medium_white hidden-sm-down"
                   data-x="center"
-                  data-y="180"
+                  data-y="300"
                   data-start="650"
-                  data-width="750"
+                  data-width="800"
                   data-transform_idle="o:1;"
                   data-transform_in="y:[100%];sX:1;sY:1;s:900;e:Power4.easeInOut;"
                   data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
@@ -360,19 +369,19 @@
                 <!-- LAYER NR. 1 -->
                 <div class="tp-caption large_white"
                   data-x="center"
-                  data-y="110"
+                  data-y="200"
                   data-start="500"
                   data-width="1000"
                   data-transform_idle="o:1;"
                   data-transform_in="y:[100%];sX:1;sY:1;o:0;s:900;e:Power4.easeInOut;"
                   data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
                   data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;"
-                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Máquinas de Seleção e Sistemas de Qualificação
+                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Máquinas e Sistemas para o seu Negócio
                 </div>
                 <!-- LAYER NR. 2 -->
                 <div class="tp-caption large_white tp-resizeme hidden-sm-down"
                   data-x="center"
-                  data-y="150"
+                  data-y="260"
                   data-start="650"
                   data-width="500"
                   data-transform_idle="o:1;"
@@ -382,14 +391,14 @@
                 <!-- LAYER NR. 3 -->
                 <div class="tp-caption medium_white hidden-sm-down"
                   data-x="center"
-                  data-y="180"
+                  data-y="300"
                   data-start="650"
-                  data-width="750"
+                  data-width="800"
                   data-transform_idle="o:1;"
                   data-transform_in="y:[100%];sX:1;sY:1;s:900;e:Power4.easeInOut;"
                   data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
                   data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Trabalhamos com projetos sob demanda de máquinas de classificação de diversos produtos<br> e de sistemas de controle de qualidade
+                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Trabalhamos com projetos sob demanda de máquinas de classificação<br> de diversos produtos e de sistemas de controle de qualidade
                 </div>
                 <!-- slide 3 end -->
               </ul>
