--- a/template/css/typography-default.css
+++ b/template/css/typography-default.css
@@ -14,7 +14,8 @@ h6,
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: "Barlow", sans-serif;
 }
 
 button,
