--- a/template/css/typography-default.css
+++ b/template/css/typography-default.css
@@ -14,8 +14,7 @@ h6,
 }
 
 body {
-  /* font-family: "Roboto", sans-serif; */
-  font-family: "Barlow", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 button,
